--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -183,3 +183,38 @@
 html {
   font-size: var(--font-size);
 }
+
+/* Spline Scene Loader */
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 3px solid #00F9FA;
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+.loader::after {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-bottom-color: #F9030B;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
